--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qewl",
   "description": "Middleware platform for GraphQL gateways",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "scripts": {
     "prepublish": "npm run build",
     "build": "rm -rf dist && tsc",
@@ -23,7 +23,7 @@
   "keywords": [
     "graphql",
     "api-gateway",
-    "express",
+    "express-middleware",
     "koa"
   ],
   "files": [
