--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "outDir": "./dist",
     "removeComments": false
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "examples"]
 }
