--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qewl",
   "description": "Middleware platform for GraphQL gateways",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "scripts": {
     "prepublish": "npm run build",
     "build": "rm -rf dist && tsc",
@@ -50,6 +50,8 @@
     "@types/node": "^8.0.52",
     "@types/node-fetch": "^1.6.7",
     "@types/zen-observable": "^0.5.3",
+    "apollo-link": "^1.0.3",
+    "graphql": "^0.11.7",
     "prettier": "1.8.2",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1"
