--- a/examples/multiple-schemas/package.json
+++ b/examples/multiple-schemas/package.json
@@ -3,17 +3,14 @@
     "start": "nodemon --ext ts --exec ts-node index.ts"
   },
   "dependencies": {
-    "apollo-engine": "^0.5.2",
     "apollo-link": "^1.0.3",
-    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "graphql": "^0.11.7",
     "graphql-playground-middleware-express": "^1.1.4",
-    "qewl": "0.2.4"
+    "qewl": "^0.2.7"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
     "nodemon": "^1.12.1",
     "ts-node": "^3.3.0",
