--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qewl",
   "description": "Middleware platform for GraphQL gateways",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "scripts": {
     "prepublish": "npm run build",
     "build": "rm -rf dist && tsc",
@@ -43,11 +43,13 @@
     "graphql-tools": "^2.7.2",
     "https-proxy-agent": "^2.1.0",
     "lodash": "^4.17.4",
+    "memory-cache": "^0.2.0",
     "node-fetch": "^1.7.3"
   },
   "devDependencies": {
     "@types/express": "^4.0.39",
     "@types/lodash": "^4.14.85",
+    "@types/memory-cache": "^0.2.0",
     "@types/node": "^8.0.52",
     "@types/node-fetch": "^1.6.7",
     "@types/zen-observable": "^0.5.3",
