--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rm -rf dist && tsc",
     "lint": "tslint ./src/**/*.ts",
     "prettier": "prettier --single-quote --semi false --print-width 90 --write ./src/**/*.ts",
+    "pretest": "npm run build",
     "test": "nyc mocha ./dist/**/*.spec.js"
   },
   "main": "./dist/index.js",
@@ -55,6 +56,7 @@
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.52",
     "@types/node-fetch": "^1.6.7",
+    "@types/sinon": "^4.0.0",
     "@types/zen-observable": "^0.5.3",
     "apollo-link": "^1.0.3",
     "chai": "^4.1.2",
@@ -64,6 +66,7 @@
     "mocha-junit-reporter": "^1.15.0",
     "nyc": "^11.3.0",
     "prettier": "1.8.2",
+    "sinon": "^4.1.2",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1"
   }
